# cppco

./: .gitignore  .gitmodules  CHANGELOG.MD  CMakeLists.txt  LICENSE  README.MD
.github/codeql/: codeql-config.yml
.github/workflows/: cmake-multi-platform.yml  codeql.yml
include/: co.hpp  co.ipp
test/: compile.cpp  example.cpp  fixture.cpp  fixture.hpp  libco_mock.hpp  libco_msvc_crash_repro.cpp  main.cpp  test.cpp
